RTCEth/Import Declarations/Visual C++/RTC4ethimpl.h


extern "C" void __stdcall n_set_wobbel_xy(unsigned short n, unsigned short long_wob, unsigned short trans_wob, double frequency);

extern "C" void __stdcall set_wobbel_xy(unsigned short long_wob, unsigned short trans_wob, double frequency);

extern "C" void __stdcall n_set_fly_x(unsigned short n, double kx);

extern "C" void __stdcall set_fly_x(double kx);

extern "C" void __stdcall n_set_fly_y(unsigned short n, double ky);

extern "C" void __stdcall set_fly_y(double ky);

extern "C" void __stdcall n_set_fly_rot(unsigned short n, double resolution);

extern "C" void __stdcall set_fly_rot(double resolution);

extern "C" void __stdcall n_fly_return(unsigned short n, short x, short y);

extern "C" void __stdcall fly_return(short x, short y);

extern "C" void __stdcall n_calculate_fly(unsigned short n, unsigned short direction, double distance);

extern "C" void __stdcall calculate_fly(unsigned short direction, double distance);

extern "C" void __stdcall n_write_io_port_list(unsigned short n, unsigned short value);

extern "C" void __stdcall write_io_port_list(unsigned short value);

extern "C" void __stdcall n_select_cor_table_list(unsigned short n, unsigned short HeadA, unsigned short HeadB);

extern "C" void __stdcall select_cor_table_list(unsigned short HeadA, unsigned short HeadB);

extern "C" void __stdcall n_set_wait(unsigned short n, unsigned short value);

extern "C" void __stdcall set_wait(unsigned short value);

extern "C" void __stdcall n_simulate_ext_start(unsigned short n, short delay, short encoder);

extern "C" void __stdcall simulate_ext_start(short delay, short encoder);

extern "C" void __stdcall n_write_da_x_list(unsigned short n, unsigned short x, unsigned short value);

extern "C" void __stdcall write_da_x_list(unsigned short x, unsigned short value);

extern "C" void __stdcall n_set_pixel_line(unsigned short n, unsigned short PixelMode, unsigned short PixelPeriod, double dx, double dy);

extern "C" void __stdcall set_pixel_line(unsigned short PixelMode, unsigned short PixelPeriod, double dx, double dy);

extern "C" void __stdcall n_set_pixel(unsigned short n, unsigned short PulsWidth, unsigned short DAValue, unsigned short ADChannel);

extern "C" void __stdcall set_pixel(unsigned short PulsWidth, unsigned short DAValue, unsigned short ADChannel);

extern "C" void __stdcall n_set_extstartpos_list(unsigned short n, unsigned short position);

extern "C" void __stdcall set_extstartpos_list(unsigned short position);

extern "C" void __stdcall n_laser_signal_on_list(unsigned short n);

extern "C" void __stdcall laser_signal_on_list();

extern "C" void __stdcall n_laser_signal_off_list(unsigned short n);

extern "C" void __stdcall laser_signal_off_list();

extern "C" void __stdcall n_set_firstpulse_killer_list(unsigned short n, unsigned short fpk);

extern "C" void __stdcall set_firstpulse_killer_list(unsigned short fpk);

extern "C" void __stdcall n_set_io_cond_list(unsigned short n, unsigned short mask_1, unsigned short mask_0, unsigned short mask_set);

extern "C" void __stdcall set_io_cond_list(unsigned short mask_1, unsigned short mask_0, unsigned short mask_set);

extern "C" void __stdcall n_clear_io_cond_list(unsigned short n, unsigned short mask_1, unsigned short mask_0, unsigned short mask_clear);

extern "C" void __stdcall clear_io_cond_list(unsigned short mask_1, unsigned short mask_0, unsigned short mask_clear);

extern "C" void __stdcall n_list_jump_cond(unsigned short n, unsigned short mask_1, unsigned short mask_0, unsigned short position);

extern "C" void __stdcall list_jump_cond(unsigned short mask_1, unsigned short mask_0, unsigned short position);

extern "C" void __stdcall n_list_call_cond(unsigned short n, unsigned short mask_1, unsigned short mask_0, unsigned short position);

extern "C" void __stdcall list_call_cond(unsigned short mask_1, unsigned short mask_0, unsigned short position);

extern "C" unsigned short __stdcall n_get_input_pointer(unsigned short n);

extern "C" unsigned short __stdcall get_input_pointer();

extern "C" unsigned short __stdcall rtc4_max_cards();

extern "C" void __stdcall n_get_status(unsigned short n, unsigned short* busy, unsigned short* position);

extern "C" void __stdcall get_status(unsigned short* busy, unsigned short* position);

extern "C" unsigned short __stdcall n_read_status(unsigned short n);

extern "C" unsigned short __stdcall read_status();

extern "C" unsigned short __stdcall n_get_startstop_info(unsigned short n);

extern "C" unsigned short __stdcall get_startstop_info();

extern "C" unsigned short __stdcall n_get_marking_info(unsigned short n);

extern "C" unsigned short __stdcall get_marking_info();

extern "C" unsigned short __stdcall get_dll_version();

extern "C" void __stdcall n_set_start_list_1(unsigned short n);

extern "C" void __stdcall set_start_list_1();

extern "C" void __stdcall n_set_start_list_2(unsigned short n);

extern "C" void __stdcall set_start_list_2();

extern "C" void __stdcall n_set_start_list(unsigned short n, unsigned short ListNo);

extern "C" void __stdcall set_start_list(unsigned short ListNo);

extern "C" void __stdcall n_execute_list_1(unsigned short n);

extern "C" void __stdcall execute_list_1();

extern "C" void __stdcall n_execute_list_2(unsigned short n);

extern "C" void __stdcall execute_list_2();

extern "C" void __stdcall n_execute_list(unsigned short n, unsigned short ListNo);

extern "C" void __stdcall execute_list(unsigned short ListNo);

extern "C" void __stdcall n_write_8bit_port(unsigned short n, unsigned short value);

extern "C" void __stdcall write_8bit_port(unsigned short value);

extern "C" void __stdcall n_write_io_port(unsigned short n, unsigned short value);

extern "C" void __stdcall write_io_port(unsigned short value);

extern "C" long __stdcall n_eth_status(unsigned short n);

extern "C" long __stdcall eth_status();

extern "C" void __stdcall n_auto_change(unsigned short n);

extern "C" void __stdcall auto_change();

extern "C" void __stdcall n_auto_change_pos(unsigned short n, unsigned short start);

extern "C" void __stdcall auto_change_pos(unsigned short start);

extern "C" void __stdcall aut_change();

extern "C" void __stdcall n_start_loop(unsigned short n);

extern "C" void __stdcall start_loop();

extern "C" void __stdcall n_quit_loop(unsigned short n);

extern "C" void __stdcall quit_loop();

extern "C" void __stdcall n_stop_execution(unsigned short n);

extern "C" void __stdcall stop_execution();

extern "C" unsigned short __stdcall n_read_io_port(unsigned short n);

extern "C" unsigned short __stdcall read_io_port();

extern "C" void __stdcall n_write_da_1(unsigned short n, unsigned short value);

extern "C" void __stdcall write_da_1(unsigned short value);

extern "C" void __stdcall n_write_da_2(unsigned short n, unsigned short value);

extern "C" void __stdcall write_da_2(unsigned short value);

extern "C" void __stdcall n_set_max_counts(unsigned short n, long counts);

extern "C" void __stdcall set_max_counts(long counts);

extern "C" long __stdcall n_get_counts(unsigned short n);

extern "C" long __stdcall get_counts();

extern "C" void __stdcall n_set_matrix(unsigned short n, double M11, double M12, double M21, double M22);

extern "C" void __stdcall set_matrix(double M11, double M12, double M21, double M22);

extern "C" void __stdcall n_set_offset(unsigned short n, short Xoffset, short Yoffset);

extern "C" void __stdcall set_offset(short Xoffset, short Yoffset);

extern "C" void __stdcall n_goto_xyz(unsigned short n, short X, short Y, short Z);

extern "C" void __stdcall goto_xyz(short X, short Y, short Z);

extern "C" void __stdcall n_goto_xy(unsigned short n, short X, short Y);

extern "C" void __stdcall goto_xy(short X, short Y);

extern "C" unsigned short __stdcall n_get_hex_version(unsigned short n);

extern "C" unsigned short __stdcall get_hex_version();

extern "C" void __stdcall n_disable_laser(unsigned short n);

extern "C" void __stdcall disable_laser();

extern "C" void __stdcall n_enable_laser(unsigned short n);

extern "C" void __stdcall enable_laser();

extern "C" void __stdcall n_stop_list(unsigned short n);

extern "C" void __stdcall stop_list();

extern "C" void __stdcall n_restart_list(unsigned short n);

extern "C" void __stdcall restart_list();

extern "C" void __stdcall n_get_xyz_pos(unsigned short n, short* X, short* Y, short* Z);

extern "C" void __stdcall get_xyz_pos(short* X, short* Y, short* Z);

extern "C" void __stdcall n_get_xy_pos(unsigned short n, short* X, short* Y);

extern "C" void __stdcall get_xy_pos(short* X, short* Y);

extern "C" void __stdcall n_select_list(unsigned short n, unsigned short list_2);

extern "C" void __stdcall select_list(unsigned short list_2);

extern "C" void __stdcall n_z_out(unsigned short n, short z);

extern "C" void __stdcall z_out(short z);

extern "C" void __stdcall n_set_firstpulse_killer(unsigned short n, unsigned short fpk);

extern "C" void __stdcall set_firstpulse_killer(unsigned short fpk);

extern "C" void __stdcall n_set_standby(unsigned short n, unsigned short half_period, unsigned short pulse);

extern "C" void __stdcall set_standby(unsigned short half_period, unsigned short pulse);

extern "C" void __stdcall n_laser_signal_on(unsigned short n);

extern "C" void __stdcall laser_signal_on();

extern "C" void __stdcall n_laser_signal_off(unsigned short n);

extern "C" void __stdcall laser_signal_off();

extern "C" void __stdcall n_set_delay_mode(unsigned short n, unsigned short VarPoly, unsigned short DirectMove3D, unsigned short EdgeLevel, unsigned short MinJumpDelay, unsigned short JumpLengthLimit);

extern "C" void __stdcall set_delay_mode(unsigned short VarPoly, unsigned short DirectMove3D, unsigned short EdgeLevel, unsigned short MinJumpDelay, unsigned short JumpLengthLimit);

extern "C" void __stdcall n_set_piso_control(unsigned short n, unsigned short l1, unsigned short l2);

extern "C" void __stdcall set_piso_control(unsigned short l1, unsigned short l2);

extern "C" void __stdcall n_select_status(unsigned short n, unsigned short mode);

extern "C" void __stdcall select_status(unsigned short mode);

extern "C" void __stdcall n_get_encoder(unsigned short n, short* Zx, short* Zy);

extern "C" void __stdcall get_encoder(short* Zx, short* Zy);

extern "C" void __stdcall n_select_cor_table(unsigned short n, unsigned short HeadA, unsigned short HeadB);

extern "C" void __stdcall select_cor_table(unsigned short HeadA, unsigned short HeadB);

extern "C" void __stdcall n_execute_at_pointer(unsigned short n, unsigned short position);

extern "C" void __stdcall execute_at_pointer(unsigned short position);

extern "C" unsigned short __stdcall n_get_head_status(unsigned short n, unsigned short Head);

extern "C" unsigned short __stdcall get_head_status(unsigned short Head);

extern "C" void __stdcall n_simulate_encoder(unsigned short n, unsigned short Channel);

extern "C" void __stdcall simulate_encoder(unsigned short Channel);

extern "C" void __stdcall n_release_wait(unsigned short n);

extern "C" void __stdcall release_wait();

extern "C" unsigned short __stdcall n_get_wait_status(unsigned short n);

extern "C" unsigned short __stdcall get_wait_status();

extern "C" void __stdcall n_set_laser_mode(unsigned short n, unsigned short mode);

extern "C" void __stdcall set_laser_mode(unsigned short mode);