RTCEth/Import Declarations/Delphi/RTC4ethImport.pas

procedure n_set_wobbel_xy(n: word; long_wob: word; trans_wob: word; frequency: double); stdcall; external RTC4ethDLL;
procedure set_wobbel_xy(long_wob: word; trans_wob: word; frequency: double); stdcall; external RTC4ethDLL;
procedure n_set_fly_x(n: word; kx: double); stdcall; external RTC4ethDLL;
procedure set_fly_x(kx: double); stdcall; external RTC4ethDLL;
procedure n_set_fly_y(n: word; ky: double); stdcall; external RTC4ethDLL;
procedure set_fly_y(ky: double); stdcall; external RTC4ethDLL;
procedure n_set_fly_rot(n: word; resolution: double); stdcall; external RTC4ethDLL;
procedure set_fly_rot(resolution: double); stdcall; external RTC4ethDLL;
procedure n_fly_return(n: word; x: smallint; y: smallint); stdcall; external RTC4ethDLL;
procedure fly_return(x: smallint; y: smallint); stdcall; external RTC4ethDLL;
procedure n_calculate_fly(n: word; direction: word; distance: double); stdcall; external RTC4ethDLL;
procedure calculate_fly(direction: word; distance: double); stdcall; external RTC4ethDLL;
procedure n_write_io_port_list(n: word; value: word); stdcall; external RTC4ethDLL;
procedure write_io_port_list(value: word); stdcall; external RTC4ethDLL;
procedure n_select_cor_table_list(n: word; HeadA: word; HeadB: word); stdcall; external RTC4ethDLL;
procedure select_cor_table_list(HeadA: word; HeadB: word); stdcall; external RTC4ethDLL;
procedure n_set_wait(n: word; value: word); stdcall; external RTC4ethDLL;
procedure set_wait(value: word); stdcall; external RTC4ethDLL;
procedure n_simulate_ext_start(n: word; delay: smallint; encoder: smallint); stdcall; external RTC4ethDLL;
procedure simulate_ext_start(delay: smallint; encoder: smallint); stdcall; external RTC4ethDLL;
procedure n_write_da_x_list(n: word; x: word; value: word); stdcall; external RTC4ethDLL;
procedure write_da_x_list(x: word; value: word); stdcall; external RTC4ethDLL;
procedure n_set_pixel_line(n: word; PixelMode: word; PixelPeriod: word; dx: double; dy: double); stdcall; external RTC4ethDLL;
procedure set_pixel_line(PixelMode: word; PixelPeriod: word; dx: double; dy: double); stdcall; external RTC4ethDLL;
procedure n_set_pixel(n: word; PulsWidth: word; DAValue: word; ADChannel: word); stdcall; external RTC4ethDLL;
procedure set_pixel(PulsWidth: word; DAValue: word; ADChannel: word); stdcall; external RTC4ethDLL;
procedure n_set_extstartpos_list(n: word; position: word); stdcall; external RTC4ethDLL;
procedure set_extstartpos_list(position: word); stdcall; external RTC4ethDLL;
procedure n_laser_signal_on_list(n: word); stdcall; external RTC4ethDLL;
procedure laser_signal_on_list; stdcall; external RTC4ethDLL;
procedure n_laser_signal_off_list(n: word); stdcall; external RTC4ethDLL;
procedure laser_signal_off_list; stdcall; external RTC4ethDLL;
procedure n_set_firstpulse_killer_list(n: word; fpk: word); stdcall; external RTC4ethDLL;
procedure set_firstpulse_killer_list(fpk: word); stdcall; external RTC4ethDLL;
procedure n_set_io_cond_list(n: word; mask_1: word; mask_0: word; mask_set: word); stdcall; external RTC4ethDLL;
procedure set_io_cond_list(mask_1: word; mask_0: word; mask_set: word); stdcall; external RTC4ethDLL;
procedure n_clear_io_cond_list(n: word; mask_1: word; mask_0: word; mask_clear: word); stdcall; external RTC4ethDLL;
procedure clear_io_cond_list(mask_1: word; mask_0: word; mask_clear: word); stdcall; external RTC4ethDLL;
procedure n_list_jump_cond(n: word; mask_1: word; mask_0: word; position: word); stdcall; external RTC4ethDLL;
procedure list_jump_cond(mask_1: word; mask_0: word; position: word); stdcall; external RTC4ethDLL;
procedure n_list_call_cond(n: word; mask_1: word; mask_0: word; position: word); stdcall; external RTC4ethDLL;
procedure list_call_cond(mask_1: word; mask_0: word; position: word); stdcall; external RTC4ethDLL;
function  n_get_input_pointer(n: word): word; stdcall; external RTC4ethDLL;
function  get_input_pointer: word; stdcall; external RTC4ethDLL;
function  rtc4_max_cards: word; stdcall; external RTC4ethDLL;
procedure n_get_status(n: word; var busy: wordbool; var position: word); stdcall; external RTC4ethDLL;
procedure get_status(var busy: wordbool; var position: word); stdcall; external RTC4ethDLL;
function  n_read_status(n: word): word; stdcall; external RTC4ethDLL;
function  read_status: word; stdcall; external RTC4ethDLL;
function  n_get_startstop_info(n: word): word; stdcall; external RTC4ethDLL;
function  get_startstop_info: word; stdcall; external RTC4ethDLL;
function  n_get_marking_info(n: word): word; stdcall; external RTC4ethDLL;
function  get_marking_info: word; stdcall; external RTC4ethDLL;
function  get_dll_version: word; stdcall; external RTC4ethDLL;
procedure n_set_start_list_1(n: word); stdcall; external RTC4ethDLL;
procedure set_start_list_1; stdcall; external RTC4ethDLL;
procedure n_set_start_list_2(n: word); stdcall; external RTC4ethDLL;
procedure set_start_list_2; stdcall; external RTC4ethDLL;
procedure n_set_start_list(n: word; ListNo: word); stdcall; external RTC4ethDLL;
procedure set_start_list(ListNo: word); stdcall; external RTC4ethDLL;
procedure n_execute_list_1(n: word); stdcall; external RTC4ethDLL;
procedure execute_list_1; stdcall; external RTC4ethDLL;
procedure n_execute_list_2(n: word); stdcall; external RTC4ethDLL;
procedure execute_list_2; stdcall; external RTC4ethDLL;
procedure n_execute_list(n: word; ListNo: word); stdcall; external RTC4ethDLL;
procedure execute_list(ListNo: word); stdcall; external RTC4ethDLL;
procedure n_write_8bit_port(n: word; value: word); stdcall; external RTC4ethDLL;
procedure write_8bit_port(value: word); stdcall; external RTC4ethDLL;
procedure n_write_io_port(n: word; value: word); stdcall; external RTC4ethDLL;
procedure write_io_port(value: word); stdcall; external RTC4ethDLL;
function  n_eth_status(n: word): longint; stdcall; external RTC4ethDLL;
function  eth_status: longint; stdcall; external RTC4ethDLL;
procedure n_auto_change(n: word); stdcall; external RTC4ethDLL;
procedure auto_change; stdcall; external RTC4ethDLL;
procedure n_auto_change_pos(n: word; start: word); stdcall; external RTC4ethDLL;
procedure auto_change_pos(start: word); stdcall; external RTC4ethDLL;
procedure aut_change; stdcall; external RTC4ethDLL;
procedure n_start_loop(n: word); stdcall; external RTC4ethDLL;
procedure start_loop; stdcall; external RTC4ethDLL;
procedure n_quit_loop(n: word); stdcall; external RTC4ethDLL;
procedure quit_loop; stdcall; external RTC4ethDLL;
procedure n_stop_execution(n: word); stdcall; external RTC4ethDLL;
procedure stop_execution; stdcall; external RTC4ethDLL;
function  n_read_io_port(n: word): word; stdcall; external RTC4ethDLL;
function  read_io_port: word; stdcall; external RTC4ethDLL;
procedure n_write_da_1(n: word; value: word); stdcall; external RTC4ethDLL;
procedure write_da_1(value: word); stdcall; external RTC4ethDLL;
procedure n_write_da_2(n: word; value: word); stdcall; external RTC4ethDLL;
procedure write_da_2(value: word); stdcall; external RTC4ethDLL;
procedure n_set_max_counts(n: word; counts: longint); stdcall; external RTC4ethDLL;
procedure set_max_counts(counts: longint); stdcall; external RTC4ethDLL;
function  n_get_counts(n: word): longint; stdcall; external RTC4ethDLL;
function  get_counts: longint; stdcall; external RTC4ethDLL;
procedure n_set_matrix(n: word; M11: double; M12: double; M21: double; M22: double); stdcall; external RTC4ethDLL;
procedure set_matrix(M11: double; M12: double; M21: double; M22: double); stdcall; external RTC4ethDLL;
procedure n_set_offset(n: word; Xoffset: smallint; Yoffset: smallint); stdcall; external RTC4ethDLL;
procedure set_offset(Xoffset: smallint; Yoffset: smallint); stdcall; external RTC4ethDLL;
procedure n_goto_xyz(n: word; X: smallint; Y: smallint; Z: smallint); stdcall; external RTC4ethDLL;
procedure goto_xyz(X: smallint; Y: smallint; Z: smallint); stdcall; external RTC4ethDLL;
procedure n_goto_xy(n: word; X: smallint; Y: smallint); stdcall; external RTC4ethDLL;
procedure goto_xy(X: smallint; Y: smallint); stdcall; external RTC4ethDLL;
function  n_get_hex_version(n: word): word; stdcall; external RTC4ethDLL;
function  get_hex_version: word; stdcall; external RTC4ethDLL;
procedure n_disable_laser(n: word); stdcall; external RTC4ethDLL;
procedure disable_laser; stdcall; external RTC4ethDLL;
procedure n_enable_laser(n: word); stdcall; external RTC4ethDLL;
procedure enable_laser; stdcall; external RTC4ethDLL;
procedure n_stop_list(n: word); stdcall; external RTC4ethDLL;
procedure stop_list; stdcall; external RTC4ethDLL;
procedure n_restart_list(n: word); stdcall; external RTC4ethDLL;
procedure restart_list; stdcall; external RTC4ethDLL;
procedure n_get_xyz_pos(n: word; var X: smallint; var Y: smallint; var Z: smallint); stdcall; external RTC4ethDLL;
procedure get_xyz_pos(var X: smallint; var Y: smallint; var Z: smallint); stdcall; external RTC4ethDLL;
procedure n_get_xy_pos(n: word; var X: smallint; var Y: smallint); stdcall; external RTC4ethDLL;
procedure get_xy_pos(var X: smallint; var Y: smallint); stdcall; external RTC4ethDLL;
procedure n_select_list(n: word; list_2: word); stdcall; external RTC4ethDLL;
procedure select_list(list_2: word); stdcall; external RTC4ethDLL;
procedure n_z_out(n: word; z: smallint); stdcall; external RTC4ethDLL;
procedure z_out(z: smallint); stdcall; external RTC4ethDLL;
procedure n_set_firstpulse_killer(n: word; fpk: word); stdcall; external RTC4ethDLL;
procedure set_firstpulse_killer(fpk: word); stdcall; external RTC4ethDLL;
procedure n_set_standby(n: word; half_period: word; pulse: word); stdcall; external RTC4ethDLL;
procedure set_standby(half_period: word; pulse: word); stdcall; external RTC4ethDLL;
procedure n_laser_signal_on(n: word); stdcall; external RTC4ethDLL;
procedure laser_signal_on; stdcall; external RTC4ethDLL;
procedure n_laser_signal_off(n: word); stdcall; external RTC4ethDLL;
procedure laser_signal_off; stdcall; external RTC4ethDLL;
procedure n_set_delay_mode(n: word; VarPoly: word; DirectMove3D: word; EdgeLevel: word; MinJumpDelay: word; JumpLengthLimit: word); stdcall; external RTC4ethDLL;
procedure set_delay_mode(VarPoly: word; DirectMove3D: word; EdgeLevel: word; MinJumpDelay: word; JumpLengthLimit: word); stdcall; external RTC4ethDLL;
procedure n_set_piso_control(n: word; l1: word; l2: word); stdcall; external RTC4ethDLL;
procedure set_piso_control(l1: word; l2: word); stdcall; external RTC4ethDLL;
procedure n_select_status(n: word; mode: word); stdcall; external RTC4ethDLL;
procedure select_status(mode: word); stdcall; external RTC4ethDLL;
procedure n_get_encoder(n: word; var Zx: smallint; var Zy: smallint); stdcall; external RTC4ethDLL;
procedure get_encoder(var Zx: smallint; var Zy: smallint); stdcall; external RTC4ethDLL;
procedure n_select_cor_table(n: word; HeadA: word; HeadB: word); stdcall; external RTC4ethDLL;
procedure select_cor_table(HeadA: word; HeadB: word); stdcall; external RTC4ethDLL;
procedure n_execute_at_pointer(n: word; position: word); stdcall; external RTC4ethDLL;
procedure execute_at_pointer(position: word); stdcall; external RTC4ethDLL;
function  n_get_head_status(n: word; Head: word): word; stdcall; external RTC4ethDLL;
function  get_head_status(Head: word): word; stdcall; external RTC4ethDLL;
procedure n_simulate_encoder(n: word; Channel: word); stdcall; external RTC4ethDLL;
procedure simulate_encoder(Channel: word); stdcall; external RTC4ethDLL;
procedure n_release_wait(n: word); stdcall; external RTC4ethDLL;
procedure release_wait; stdcall; external RTC4ethDLL;
function  n_get_wait_status(n: word): word; stdcall; external RTC4ethDLL;
function  get_wait_status: word; stdcall; external RTC4ethDLL;
procedure n_set_laser_mode(n: word; mode: word); stdcall; external RTC4ethDLL;
procedure set_laser_mode(mode: word); stdcall; external RTC4ethDLL;
